[tool.poetry]
name = "data7"
version = "0.10.0"
description = "Data7 streams CSV/Parquet datasets over HTTP from SQL queries."
authors = ["Julien Maupetit <julien@maupetit.net>"]
license = "MIT"
readme = "README.md"
homepage = "https://jmaupetit.github.io/data7/"
repository = "https://github.com/jmaupetit/data7"
documentation = "https://jmaupetit.github.io/data7/"
keywords = ["database", "dataset", "SQL", "Parquet", "CSV", "HTTP"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Topic :: Database",
  "Topic :: Internet :: WWW/HTTP :: WSGI",
]

[tool.poetry.dependencies]
dynaconf = "^3.2.5"
pandas = "^2.2.2"
pip = "^25.1"
pyarrow = "^20.0.0"
pyinstrument = "^5.0.0"
python = "^3.11"
sentry-sdk = {extras = ["starlette"], version = "^2.7.1"}
sqlalchemy = "^2.0.30"
starlette = "^0.46.2"
typer = "^0.15.1"
uvicorn = {extras = ["standard"], version = "^0.34.0"}

[tool.poetry.group.dev.dependencies]
asyncpg = "^0.30.0"
black = ">=24.4.2,<26.0.0"
databases = {extras = ["aiosqlite"], version = "^0.9.0"}
matplotlib = "^3.10.0"
mkdocs-click = "^0.9.0"
mkdocs-material = "^9.5.27"
mypy = "^1.13.0"
psycopg = {extras = ["binary", "pool"], version = "^3.2.1"}
pytest = "^8.2.2"
pytest-cov = "^6.0.0"
pytest-httpx = ">=0.30,<0.36"
ruff = "^0.11.8"
types-pyyaml = "^6.0.12.20240311"

[tool.poetry.scripts]
data7 = "data7.cli:cli"

# Third party packages configuration
[tool.coverage.run]
omit = []

[tool.pytest.ini_options]
addopts = "-v --cov-report term-missing --cov=data7"
python_files = [
    "test_*.py",
    "tests.py",
]
testpaths = [
    "tests",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = []

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D",  # pydocstyle
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # Isort
    "ISC",  # flake8-implicit-str-concat
    "PLC",  # Pylint Convention
    "PLE",  # Pylint Error
    "PLR",  # Pylint Refactor
    "PLW",  # Pylint Warning
    "RUF100",  # Ruff unused-noqa
    "S",  # flake8-bandit
    "T20", # flake8-print
    "W",  # pycodestyle warning
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101", # use of assert
]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.mypy]
files = "./**/*.py"
exclude = []
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
