[project]
name = "data7"
version = "1.0.0"
description = "Data7 streams CSV/Parquet datasets over HTTP from SQL queries."
authors = [
  {name="Julien Maupetit", email="julien@maupetit.net"},
]
license = "MIT"
readme = "README.md"
keywords = ["database", "dataset", "SQL", "Parquet", "CSV", "HTTP"]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Topic :: Database",
  "Topic :: Internet :: WWW/HTTP :: WSGI",
]
dependencies = [
    "dynaconf>=3.2.12",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pyinstrument>=5.1.2",
    "sentry-sdk[starlette]>=2.48.0",
    "sqlalchemy>=2.0.45",
    "starlette>=0.50.0",
    "typer>=0.21.0",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "asyncpg>=0.31.0",
    "black>=25.12.0",
    "databases>=0.9.0",
    "matplotlib>=3.10.8",
    "mkdocs-click>=0.9.0",
    "mkdocs-material>=9.7.1",
    "mypy>=1.19.1",
    "psycopg[binary,pool]>=3.3.2",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-httpx>=0.36.0",
    "ruff>=0.14.10",
    "types-pyyaml>=6.0.12.20250915",
]

[project.urls]
Homepage = "https://jmaupetit.github.io/data7/"
Repository = "https://github.com/jmaupetit/data7"
Documentation = "https://jmaupetit.github.io/data7/"

[project.scripts]
data7 = "data7.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Third party packages configuration
[tool.coverage.run]
omit = []

[tool.pytest.ini_options]
addopts = "-v --cov-report term-missing --cov=data7"
python_files = [
    "test_*.py",
    "tests.py",
]
testpaths = [
    "tests",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = []

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D",  # pydocstyle
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # Isort
    "ISC",  # flake8-implicit-str-concat
    "PLC",  # Pylint Convention
    "PLE",  # Pylint Error
    "PLR",  # Pylint Refactor
    "PLW",  # Pylint Warning
    "RUF100",  # Ruff unused-noqa
    "S",  # flake8-bandit
    "T20", # flake8-print
    "W",  # pycodestyle warning
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101", # use of assert
]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.mypy]
files = "./**/*.py"
exclude = []
ignore_missing_imports = true

